# koa

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
koa-vscode/: package-lock.json  package.json
koa-vscode/src/: extension.ts  gpuPicker.ts  koaCli.ts  koaSession.ts  sessionManager.ts  statusBar.ts  types.ts
scripts/: com.koa.daily-auth.plist  koa-auth-setup.sh  koa-auth.sh  koa-ssh-config-snippet
src/koa/: __init__.py  __main__.py  config.py  dashboard_app.py  dashboard_data.py  formatting.py  manifest.py  mcp_server.py  runs.py  slurm.py
src/koa/commands/: __init__.py  anywhere.py  budget.py  chain.py  diagnose.py  distributed.py  efficiency.py  env.py  jupyter.py  limits.py  priority.py  resubmit.py  spy.py  validate.py  watch.py
src/koa/templates/: basic_job.slurm.tmpl  koa-config.yaml.tmpl  setup_env.sh.tmpl
src/koa_cli/: __init__.py  __main__.py  formatting.py  mcp_server.py  slurm.py  ssh.py
src/koa_cli/commands/: __init__.py  audit.py  budget.py  env.py  limits.py  notify.py  optimize.py  sweep.py  why.py
